# module-openldap

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  Makefile.am  README  README-BINARIES  RELEASE-NOTES  configure.ac  qore-openldap-module.spec
cmake/: FindOpenLDAP.cmake  config.h.cmake
docs/: doxyfile.tmpl  mainpage.doxygen.tmpl
src/: Makefile.am  QC_LdapClient.qpp  QoreLdapClient.h  openldap-module.cpp  openldap-module.h  single-compilation-unit.cpp
test/: ldap.q  ldapadd  ldapdelete  ldapmodify  ldapsearch  qldapadd  qldapdelete  qldapmodify  qldappasswd  qldapsearch
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
